add pie view
